@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0


class ReservationAttemptUI {
}

class ReservationAttemptController {
    + createRequest()
}

class ReservationAttemptService {
   + createRequest()
}

interface ReservationAttemptRepository {
    + save(ReservationAttempt reservationAttempt)
}


class ReservationAttempt {
    - id : String
    - date: Date
    - status: ReservationAttemptStatus
    - client: Client
    - advertisement : Advertisement
    + ReservationAttempt(...)
}

enum ReservationAttemptStatus {
    designation: String
}

class ReservationAttemptMapper {
    + toEntity(ReservationAttemptDTO reservationAttemptDTO))
    + toDTO(ReservationAttempt reservationAttempt))
}

class ReservationAttemptDTO {
    - id : String
    - email: String
    - phone: String
    - date: Date
    - status: ReservationAttemptStatus
    - client: Client
    - advertisement : Advertisement
    + ReservationAttemptDTO(...)
}

class User {
    - email: String
    - phone: String
    - role: String
}

' --- Relacionamentos ---
User .> ReservationAttemptUI : asks to create\nnew request
ReservationAttemptUI ..> ReservationAttemptController
ReservationAttemptController ..> ReservationAttemptService
ReservationAttemptService ..> ReservationAttemptRepository
ReservationAttemptService ..> ReservationAttemptMapper
ReservationAttemptMapper ..> ReservationAttempt
ReservationAttemptMapper ..> ReservationAttemptDTO
ReservationAttemptRepository "1" --> "*" ReservationAttempt : request
ReservationAttempt "*" --> "1" ReservationAttemptStatus : has
@enduml